# aoc23

./: .gitignore  Cargo.toml  README.md  main.rs
src/: main.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs
