[package]
name = "advend_of_code_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.8.0"

[[bin]]
name = "advend_of_code_2023"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = "fat"
